# doc2latex

./: CMakeLists.txt  README.md  doc2latex  doc2latex.cpp
docs/: input.docx
src/: doc2latex.cpp
